--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-warp = "0.3.3"
+warp = { version = "0.3.3", features = ["websocket"] }
 tokio = { version = "1", features = ["full"] }
+tokio-stream = "0.1.1"
+futures-util = { version = "0.3", default-features = false, features = ["sink"] }
