--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,4 @@ warp = { version = "0.3.3", features = ["websocket"] }
 tokio = { version = "1", features = ["full"] }
 tokio-stream = "0.1.1"
 futures-util = { version = "0.3", default-features = false, features = ["sink"] }
-rppal = "0.14.1"
+tokio-gpiod = "0.2.2"
