Hack it up to make it still build on macOS
The gpio library requires Linux, so make that conditional. On non-Linux,
just do some random inputs.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,7 @@ warp = { version = "0.3.3", features = ["websocket"] }
 tokio = { version = "1", features = ["full"] }
 tokio-stream = "0.1.1"
 futures-util = { version = "0.3", default-features = false, features = ["sink"] }
+rand = "0.8.5"
+
+[target.'cfg(linux)'.dependencies]
 tokio-gpiod = "0.2.2"
