Fix linux only stuff

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,5 +12,5 @@ tokio-stream = "0.1.1"
 futures-util = { version = "0.3", default-features = false, features = ["sink"] }
 rand = "0.8.5"
 
-[target.'cfg(linux)'.dependencies]
+[target.'cfg(target_os = "linux")'.dependencies]
 tokio-gpiod = "0.2.2"
