Use mock inputs in devcontainer

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,7 +10,7 @@
   "updateContentCommand": "cargo build",
   "postCreateCommand": "",
   "postAttachCommand": {
-    "server": "cargo run"
+    "server": "cargo run -- --mock"
   },
   "portsAttributes": {
     "8888": {
